--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -9,15 +9,15 @@ contact_links:
     about: Visit our official website for comprehensive documentation and resources
     
   - name: 📚 Documentation & Getting Started
-    url: https://www.cin-framework.com/getting-started.html
+    url: https://www.cin-framework.com/p/0.html?page=getting-started
     about: Complete documentation and step-by-step guides for CIN Framework
     
   - name: 💬 Community Support & Discussions
-    url: https://github.com/cin-framework/cin-framework/discussions
+    url: https://discord.gg/shWU2faurw
     about: Join our community discussions for questions, ideas, and general support
     
   - name: 🔒 Security Vulnerabilities
-    url: https://www.cin-framework.com/reporting_guidelines.html
+    url: https://www.cin-framework.com/p/0.html?page=reporting_guidelines
     about: Report security vulnerabilities privately following our security guidelines
     
   - name: 📧 Direct Contact
@@ -25,21 +25,17 @@ contact_links:
     about: Contact our support team directly for urgent matters or private inquiries
     
   - name: 🛠️ CIN CLI Support
-    url: https://www.cin-framework.com/cin-cli.html
+    url: https://www.cin-framework.com/p/0.html?page=cin-cli
     about: Specific support and documentation for CIN CLI tool
     
   - name: 📦 CIN Library Documentation
-    url: https://www.cin-framework.com/cin-library.html
+    url: https://www.cin-framework.com/p/0.html?page=cin-library
     about: Documentation and examples for CIN Library components
     
-  - name: 💰 Financial Support
-    url: https://www.cin-framework.com/financial-support.html
-    about: Support CIN Framework development through financial contributions
-    
   - name: ❓ Frequently Asked Questions
-    url: https://www.cin-framework.com/faq.html
+    url: https://www.cin-framework.com/p/0.html?page=faq
     about: Find answers to common questions about CIN Framework
     
   - name: 🏢 About CIN Framework
-    url: https://www.cin-framework.com/about.html
+    url: https://www.cin-framework.com/p/0.html?page=about
     about: Learn more about CIN Framework, our mission, and the team behind it
