--- a/workflows/pages.yml
+++ b/workflows/pages.yml
@@ -26,11 +26,20 @@ jobs:
       
       - name: Setup Pages
         uses: actions/configure-pages@v5
+        with:
+          # Configure Jekyll to use web folder as source
+          generator_config_file: _config.yml
+      
+      - name: Build with Jekyll
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./.github/web
+          destination: ./_site
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'web'
+          path: './_site'
       
       - name: Deploy to GitHub Pages
         id: deployment
