--- a/workflows/pages.yml
+++ b/workflows/pages.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./.github/web
+          source: ./web
           destination: ./_site
       
       - name: Upload artifact
